app/scss/partials/_game-card.scss
.game-card {
	position: relative;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	gap: 2rem;
	padding: 2rem;
	width: 100%;
	outline: none;
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);

	@media (min-width: 390px) {
		width: 47%;
	}
	@media (min-width: 768px) {
		width: 16rem;
	}

	.background {
		position: absolute;
		height: 100%;
		width: 100%;
		top: 0;
		left: 0;
		z-index: -1;
		border-radius: 2rem;
		transition: transform 0.2s ease;
		will-change: transform;
		overflow: hidden;

		&::before {
			content: '';
			position: absolute;
			height: 100%;
			width: 100%;
			top: 0;
			left: 0;
			background-size: cover;
			background-repeat: no-repeat;
			background-color: $color-blue-darker;
			transition: transform 0.2s ease;
			will-change: transform;
		}

		&::after {
			content: '';
			position: absolute;
			height: 100%;
			width: 100%;
			top: 0;
			left: 0;
			background-image: linear-gradient(to bottom, rgba($color-blue-darker, 0.8), rgba($color-blue-darker, 0.6));
			transition: transform 0.2s ease;
			will-change: transform;
		}
	}

	&.flag-nerd {
		.background {
			&::before {
				background-image: url('/img/cards/flag-nerd.webp');
			}
		}
	}


	&.capital-nerd {
		.background {
			&::before {
				background-image: url('/img/cards/capital-nerd.webp');
			}
		}
	}

	&.map-nerd {
		.background {
			&::before {
				background-image: url('/img/cards/map-nerd.webp');
			}
		}
	}

	&.country-nerd {
		.background {
			&::before {
				background-image: url('/img/cards/country-nerd.webp');
			}

			&::after {
				background-image: linear-gradient(to bottom, rgba($color-blue-darker, 0.8), rgba($color-blue-darker, 0.6));
			}
		}
	}

	.card-inner {
		position: relative;
		height: 100%;
	}

	.card-first-step {
		display: flex;
		height: 100%;
		flex-direction: column;
		justify-content: space-between;
		cursor: pointer;
		transition: opacity 0.3s ease-out;
	}

	.card-second-step {
		position: absolute;
		top: 0;
		left: 0;
		height: 100%;
		width: 100%;
		opacity: 0;
		pointer-events: none;
		transition: opacity 0.3s ease-out;

		display: flex;
		flex-direction: column;
		justify-content: center;
		gap: 1rem;

		.card-mode-link {
			width: 100%;
		}
	}

	&.show-second-step {
		.background {
			&::after {
				background-color: black;
			}
		}

		.card-first-step {
			opacity: 0;
			pointer-events: none;
		}

		.card-second-step {
			opacity: 1;
			pointer-events: initial;
		}
	}

	.card-title {
		margin-top: 0;
		position: relative;
	}

	.subtitle {
		font-size: 0.8rem;
	}

	.card-link {
		color: white;
		text-decoration: none;
		max-width: 10rem;
		font-size: 0.8rem;

		&::after {
			content: "";
			position: absolute;
			top: 0;
			right: 0;
			bottom: 0;
			left: 0;
			z-index: 1;
		}
	}

	.card-bottom {
		display: flex;
		justify-content: center;

		.btn {
			transition: transform 0.2s ease;
			will-change: transform;
		}
	}

	&:hover {
		.background {
			overflow: hidden;

			&::before {
				transform: scale(1.05);
			}
		}

		.btn {
			transform: scale(1.05);
		}
	}
}

